[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coreai"
version = "0.0.1"
description = "Core AI training & inference utilities"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["coreai", "ai", "learning", "machine learning"]
dependencies = [
]
requires-python = ">=3.0"


[project.urls]
Homepage = "https://www.coreai.dev"


